@@ -1,5 +1,0 @@
-Chris Tessmer   <chris.tessmer@onyxpoint.com>
-Kendall Moore   <kmoore@keywcorp.com>
-Nick Markowski  <nmarkowski@keywcorp.com>
-Nick Miller     <nick.miller@onyxpoint.com>
-Trevor Vaughan  <tvaughan@onyxpoint.com>
