@@ -1,8 +1,0 @@
-Requires: pupmod-herculesteam-augeasproviders_grub >= 2.3.1
-Requires: pupmod-herculesteam-augeasproviders_grub < 4.0.0
-Requires: pupmod-puppetlabs-stdlib >= 4.13.1
-Requires: pupmod-puppetlabs-stdlib < 5.0.0
-Requires: pupmod-simp-rsyslog >= 7.0.0
-Requires: pupmod-simp-rsyslog < 8.0.0
-Requires: pupmod-simp-simplib >= 3.1.0
-Requires: pupmod-simp-simplib < 4.0.0
