@@ -1,0 +1,24 @@
+---
+auditd::config::audit_profiles::stig::default_suid_sgid_cmds:
+  - "/bin/cgclassify"
+  - "/bin/cgexec"
+  - "/bin/ping"
+  - "/bin/ping6"
+  - "/sbin/mount.nfs"
+  - "/sbin/netreport"
+  - "/usr/bin/at"
+  - "/usr/bin/chfn"
+  - "/usr/bin/fusermount"
+  - "/usr/bin/incrontab"
+  - "/usr/bin/ksu"
+  - "/usr/bin/locate"
+  - "/usr/bin/pkexec"
+  - "/usr/bin/ssh-agent"
+  - "/usr/bin/wall"
+  - "/usr/bin/write"
+  - "/usr/bin/Xorg"
+  - "/usr/libexec/polkit-1/polkit-agent-helper-1"
+  - "/usr/libexec/pt_chown"
+  - "/usr/libexec/utempter/utempter"
+  - "/usr/sbin/suexec"
+  - "/usr/sbin/usernetctl"
